[project]
name = "ollama-image-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "openai>=1.40.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
